--- a/war/index.html
+++ b/war/index.html
@@ -22,6 +22,7 @@
       <tr>
         <td><a href="occupancysensorservlet">OccupancySensorServlet</a></td>
         <td><a href="occupancysensorgui">OccupancySensorGui</a></td>
+        <td><a href="testpost">TestPost</a></td>
       </tr>
     </table>
   </body>
